Update Kotlin compiler to 2.1.20 and enforce stricter checks (#2957)
## Issue
<!-- Please specify the ID of the issue this PR is addressing. For
example: "Closes #1234" or "Fixes #1234" -->
Related to #2386

## Change

- Upgraded the Kotlin compiler to version 2.1.20 to follow
recommendations from JetBrains folks, and updated the plugin
configuration to use this version. Kotlin runtime libraries are still
1.9.25. That strategy works, [verified on my
repo](https://github.com/kpavlov/langchain4j-kotlin/pull/137/files),
where the main artifact is built with Kotlin 2.1.20 compiler and tests
on the samples project run with [Kotlin
1.9.25](https://github.com/kpavlov/langchain4j-kotlin/blob/main/samples/pom.xml#L16)
- Removed the `-progressive` (requires 2.1+ language version).
- Added `-Werror` flag to treat warnings as errors, ensuring stricter
enforcement of code quality during builds.

## General checklist
<!-- Please double-check the following points and mark them like this:
[X] -->
- [x] There are no breaking changes
- [ ] I have added unit and/or integration tests for my change
- [ ] The tests cover both positive and negative cases
- [x] I have manually run all the unit and integration tests in the
module I have added/changed, and they are all green
- [x] I have manually run all the unit and integration tests in the
[core](https://github.com/langchain4j/langchain4j/tree/main/langchain4j-core)
and
[main](https://github.com/langchain4j/langchain4j/tree/main/langchain4j)
modules, and they are all green
<!-- Before adding documentation and example(s) (below), please wait
until the PR is reviewed and approved. -->
- [ ] I have added/updated the
[documentation](https://github.com/langchain4j/langchain4j/tree/main/docs/docs)
- [ ] I have added an example in the [examples
repo](https://github.com/langchain4j/langchain4j-examples) (only for
"big" features)
- [ ] I have added/updated [Spring Boot
starter(s)](https://github.com/langchain4j/langchain4j-spring) (if
applicable)



--- a/langchain4j-parent/pom.xml
+++ b/langchain4j-parent/pom.xml
@@ -49,6 +49,7 @@
         <kotlin.compiler.jvmTarget>${java.version}</kotlin.compiler.jvmTarget>
         <kotlin.compiler.languageVersion>1.9</kotlin.compiler.languageVersion>
         <kotlin.compiler.apiVersion>1.9</kotlin.compiler.apiVersion>
+        <kotlin-compiler.version>2.1.20</kotlin-compiler.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.outputTimestamp>1714382357</project.build.outputTimestamp>
         <argLine></argLine>
@@ -579,12 +580,13 @@
                 <plugin>
                     <groupId>org.jetbrains.kotlin</groupId>
                     <artifactId>kotlin-maven-plugin</artifactId>
-                    <version>${kotlin.version}</version>
+                    <version>${kotlin-compiler.version}</version>
                     <extensions>true</extensions>
                     <configuration combine.self="append">
                         <jvmTarget>${java.version}</jvmTarget>
                         <javaParameters>true</javaParameters>
                         <args>
+                            <arg>-Werror</arg>
                             <arg>-Xexplicit-api=strict</arg>
                             <arg>-Xjspecify-annotations=strict</arg>
                             <arg>-Xjsr305=strict</arg>
