--- a/langchain4j-azure-cosmos-mongo-vcore/pom.xml
+++ b/langchain4j-azure-cosmos-mongo-vcore/pom.xml
@@ -12,6 +12,7 @@
     <name>LangChain4j :: Integration :: Azure CosmosDB Mongo vCore</name>
 
     <dependencies>
+
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-core</artifactId>
@@ -28,6 +29,9 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+
+
+        <!-- test dependencies -->
 
         <dependency>
             <groupId>dev.langchain4j</groupId>
