--- a/langchain4j-azure-cosmos-nosql/pom.xml
+++ b/langchain4j-azure-cosmos-nosql/pom.xml
@@ -50,6 +50,9 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
 
+
+        <!-- test dependencies -->
+
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-core</artifactId>
