--- a/document-loaders/langchain4j-document-loader-amazon-s3/pom.xml
+++ b/document-loaders/langchain4j-document-loader-amazon-s3/pom.xml
@@ -31,6 +31,14 @@
         </dependency>
 
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+
+
+        <!-- test dependencies -->
+
+        <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j</artifactId>
             <version>${project.version}</version>
