--- a/embedding-store-filter-parsers/langchain4j-embedding-store-filter-parser-sql/pom.xml
+++ b/embedding-store-filter-parsers/langchain4j-embedding-store-filter-parser-sql/pom.xml
@@ -26,6 +26,12 @@
             <version>4.8</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+
+
         <!-- test dependencies -->
 
         <dependency>
