--- a/langchain4j-http-client/pom.xml
+++ b/langchain4j-http-client/pom.xml
@@ -19,6 +19,11 @@
             <version>${project.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+
         <!-- test dependencies -->
 
         <dependency>
