--- a/document-loaders/langchain4j-document-loader-google-cloud-storage/pom.xml
+++ b/document-loaders/langchain4j-document-loader-google-cloud-storage/pom.xml
@@ -26,22 +26,19 @@
 
     <dependencies>
 
-        <!-- Google Cloud Storage -->
-
-        <dependency>
-            <groupId>com.google.cloud</groupId>
-            <artifactId>google-cloud-storage</artifactId>
-        </dependency>
-
-        <!-- LangChain4j -->
-
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-core</artifactId>
             <version>${project.version}</version>
         </dependency>
 
-        <!--- Test dependencies -->
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-storage</artifactId>
+        </dependency>
+
+
+        <!-- test dependencies -->
 
         <dependency>
             <groupId>dev.langchain4j</groupId>
