--- a/document-loaders/langchain4j-document-loader-selenium/pom.xml
+++ b/document-loaders/langchain4j-document-loader-selenium/pom.xml
@@ -22,6 +22,7 @@
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-core</artifactId>
@@ -33,6 +34,14 @@
             <artifactId>selenium-java</artifactId>
             <version>${selenium.webdriver.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+
+
+        <!-- test dependencies -->
 
         <dependency>
             <groupId>dev.langchain4j</groupId>
