--- a/http-clients/langchain4j-http-client-jdk/pom.xml
+++ b/http-clients/langchain4j-http-client-jdk/pom.xml
@@ -16,6 +16,12 @@
 
         <dependency>
             <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-http-client</artifactId>
             <version>${project.version}</version>
         </dependency>
