--- a/langchain4j-azure-ai-search/pom.xml
+++ b/langchain4j-azure-ai-search/pom.xml
@@ -27,14 +27,26 @@
 
         <dependency>
             <groupId>com.azure</groupId>
-            <artifactId>azure-search-documents</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.azure</groupId>
-                    <artifactId>azure-core-serializer-json-jackson</artifactId>
-                </exclusion>
-            </exclusions>
+            <artifactId>azure-core</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-search-documents</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+
+
+        <!-- test dependencies -->
 
         <dependency>
             <groupId>dev.langchain4j</groupId>
