--- a/langchain4j-jlama/pom.xml
+++ b/langchain4j-jlama/pom.xml
@@ -12,23 +12,14 @@
     <name>LangChain4j :: Integration :: Jlama</name>
     <description>Jlama: LLM Inference Engine for Java - Requires Java 20+</description>
 
-    <licenses>
-        <license>
-            <name>Apache-2.0</name>
-            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
-            <comments>A business-friendly OSS license</comments>
-        </license>
-    </licenses>
-
     <properties>
         <jlama.version>0.8.3</jlama.version>
-        <spotless.version>2.40.0</spotless.version>
         <java.version>21</java.version>
         <maven.compiler.release>${java.version}</maven.compiler.release>
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-core</artifactId>
@@ -46,7 +37,9 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
 
-        <!-- TESTS -->
+
+        <!-- test dependencies -->
+
         <dependency>
             <groupId>com.github.tjake</groupId>
             <artifactId>jlama-native</artifactId>
@@ -55,11 +48,13 @@
             <classifier>${os.detected.classifier}</classifier>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
