--- a/langchain4j-mariadb/pom.xml
+++ b/langchain4j-mariadb/pom.xml
@@ -15,7 +15,6 @@
 
     <properties>
         <mariadb-client.version>3.5.1</mariadb-client.version>
-        <jspecify.version>1.0.0</jspecify.version>
         <enforcer.skipRules>dependencyConvergence</enforcer.skipRules>
     </properties>
 
@@ -28,14 +27,14 @@
         </dependency>
 
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>org.mariadb.jdbc</groupId>
             <artifactId>mariadb-java-client</artifactId>
             <version>${mariadb-client.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
         </dependency>
 
         <dependency>
@@ -43,6 +42,9 @@
             <artifactId>jspecify</artifactId>
             <version>${jspecify.version}</version>
         </dependency>
+
+
+        <!-- test dependencies -->
 
         <dependency>
             <groupId>dev.langchain4j</groupId>
