--- a/langchain4j-ovh-ai/pom.xml
+++ b/langchain4j-ovh-ai/pom.xml
@@ -12,15 +12,6 @@
     <artifactId>langchain4j-ovh-ai</artifactId>
     <name>LangChain4j :: Integration :: OVHcloud AI</name>
 
-    <licenses>
-        <license>
-            <name>Apache-2.0</name>
-            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
-            <comments>A business-friendly OSS license</comments>
-        </license>
-    </licenses>
-
     <properties>
         <skipOvhAIITs>false</skipOvhAIITs>
     </properties>
@@ -33,12 +24,10 @@
             <version>${project.version}</version>
         </dependency>
 
-        <!-- DEPENDENCY CONFLICT RESOLUTION FOR OKHTTP (START) -->
         <dependency>
             <groupId>com.squareup.retrofit2</groupId>
             <artifactId>retrofit</artifactId>
         </dependency>
-        <!-- DEPENDENCY CONFLICT RESOLUTION FOR OKHTTP (END)  -->
 
         <dependency>
             <groupId>com.squareup.retrofit2</groupId>
@@ -54,6 +43,9 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+
+
+        <!-- test dependencies -->
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
