--- a/langchain4j-pgvector/pom.xml
+++ b/langchain4j-pgvector/pom.xml
@@ -11,10 +11,9 @@
 
     <artifactId>langchain4j-pgvector</artifactId>
     <name>LangChain4j :: Integration :: PGVector</name>
-    <description>It uses the pgvector-java library</description>
 
     <properties>
-        <pgvector-java.version>0.1.6</pgvector-java.version>
+        <pgvector.version>0.1.6</pgvector.version>
         <postgresql.version>42.7.4</postgresql.version>
         <!-- TODO: remove enforcer.skipRules -->
         <enforcer.skipRules>dependencyConvergence</enforcer.skipRules>
@@ -31,12 +30,7 @@
         <dependency>
             <groupId>com.pgvector</groupId>
             <artifactId>pgvector</artifactId>
-            <version>${pgvector-java.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
+            <version>${pgvector.version}</version>
         </dependency>
 
         <dependency>
@@ -46,10 +40,24 @@
         </dependency>
 
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
+
+
+        <!-- test dependencies -->
 
         <dependency>
             <groupId>dev.langchain4j</groupId>
