--- a/langchain4j-vertex-ai/pom.xml
+++ b/langchain4j-vertex-ai/pom.xml
@@ -12,15 +12,6 @@
     <artifactId>langchain4j-vertex-ai</artifactId>
     <name>LangChain4j :: Integration :: Google Vertex AI</name>
 
-    <licenses>
-        <license>
-            <name>Apache-2.0</name>
-            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
-            <comments>A business-friendly OSS license</comments>
-        </license>
-    </licenses>
-
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -62,7 +53,8 @@
             <artifactId>google-cloud-discoveryengine</artifactId>
         </dependency>
 
-        <!-- testing dependencies -->
+
+        <!-- test dependencies -->
 
         <dependency>
             <groupId>dev.langchain4j</groupId>
@@ -79,6 +71,7 @@
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j</artifactId>
@@ -103,9 +96,9 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>2.0.16</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
 </project>
