--- a/langchain4j-vespa/pom.xml
+++ b/langchain4j-vespa/pom.xml
@@ -11,21 +11,7 @@
 
     <artifactId>langchain4j-vespa</artifactId>
     <name>LangChain4j :: Integration :: Vespa</name>
-    <description>Vespa is a fully featured search engine and vector database.
-        Integration with LangChain4j uses:
-        - Vespa's client &amp; vespa-feed-client libraries which have Apache License 2.0:
-        https://github.com/vespa-engine/vespa/blob/master/LICENSE
-        - org.apache.httpcomponents.client5.httpclient5-fluent library which has Apache License 2.0:
-        https://github.com/apache/httpcomponents-client/blob/master/LICENSE.txt</description>
-
-    <licenses>
-        <license>
-            <name>Apache-2.0</name>
-            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
-            <comments>A business-friendly OSS license</comments>
-        </license>
-    </licenses>
+    <description>Vespa is a fully featured search engine and vector database</description>
 
     <properties>
         <vespa.version>8.458.13</vespa.version>
@@ -57,6 +43,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.squareup.retrofit2</groupId>
             <artifactId>converter-jackson</artifactId>
         </dependency>
@@ -71,10 +62,8 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-        </dependency>
+
+        <!-- test dependencies -->
 
         <dependency>
             <groupId>dev.langchain4j</groupId>
