Added maven-flatten-plugin, cleaned up POMs (#2964)
(cherry picked from commit eae3bd034bc82e1cd31765059df98bf33ad2acde)

--- a/langchain4j-github-models/pom.xml
+++ b/langchain4j-github-models/pom.xml
@@ -15,6 +15,13 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-bom</artifactId>
+                <version>4.1.115.Final</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
                 <groupId>org.junit.platform</groupId>
                 <artifactId>junit-platform-commons</artifactId>
                 <version>1.11.3</version>
